Adding/Fixing new Junit